--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "displayName": "Aavegotchi Unity SDK",
   "description": "Everything you need to start making games with Unity SDK",
   "dependencies": {
-    "com.unity.addressables": "1.21.17",
+    "com.unity.addressables": "1.21.17"
   }
 }
