Updating SDK for DOTween

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "com.pixelcraft_studios.aavegotchi_unity_sdk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "displayName": "Aavegotchi Unity SDK",
   "description": "Everything you need to start making games with Unity SDK",
   "dependencies": {
-    "com.unity.addressables": "1.21.17"
+    "com.unity.addressables": "1.21.17",
+	"com.unity.textmeshpro": "3.0.6"
   },
   "assets": {
     "AddressableAssetsData": "AddressableAssetsData"
