--- a/Runtime/Scripts/AavegotchiSDK.Gotchi.asmdef
+++ b/Runtime/Scripts/AavegotchiSDK.Gotchi.asmdef
@@ -6,7 +6,8 @@
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
-        "GUID:a20d025aad8c923469cced606f33ccac"
+        "GUID:a20d025aad8c923469cced606f33ccac",
+        "GUID:791e60eea98eec64c8b7782970c1cbdc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
