--- a/Runtime/Scripts/AavegotchiSDK.Gotchi.asmdef
+++ b/Runtime/Scripts/AavegotchiSDK.Gotchi.asmdef
@@ -7,7 +7,8 @@
         "GUID:2665a8d13d1b3f18800f46e256720795",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:a20d025aad8c923469cced606f33ccac",
-        "GUID:791e60eea98eec64c8b7782970c1cbdc"
+        "GUID:791e60eea98eec64c8b7782970c1cbdc",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
